--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CBax Digital Card</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <div class="profile-card">
     <img src="https://cdni.iconscout.com/illustration/free/preview/free-women-web-developer-with-laptop-2040890-1721886.png?f=webp&h=700" alt="Profile Picture" class="profile-img">
     <h1>Charlean Baxter</h1>
@@ -8,3 +16,4 @@
         <a href="#" target="_blank"><i class="fab fa-github"></i> GitHub</a>
     </div>
 </div>
+</html>
