--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CBax Digital Card</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <div class="profile-card">
     <img src="https://cdni.iconscout.com/illustration/free/preview/free-women-web-developer-with-laptop-2040890-1721886.png?f=webp&h=700" alt="Profile Picture" class="profile-img">
