--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CBax Digital Card</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<div class="profile-card">
+<!-- <div class="profile-card">
     <img src="https://cdni.iconscout.com/illustration/free/preview/free-women-web-developer-with-laptop-2040890-1721886.png?f=webp&h=700" alt="Profile Picture" class="profile-img">
     <h1>Charlean Baxter</h1>
     <p class="bio">I take aspiring web developers from "I can't" to "I can"</p>
@@ -15,5 +15,40 @@
         <a href="#" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
         <a href="#" target="_blank"><i class="fab fa-github"></i> GitHub</a>
     </div>
+</div> -->
+    <!-- <div class="profile-card">
+    <img src="https://cdni.iconscout.com/illustration/free/preview/free-women-web-developer-with-laptop-2040890-1721886.png?f=webp&h=700" alt="Profile Picture" class="profile-img">
+    <h1>Charlean Baxter</h1>
+    <p class="bio">I take aspiring web developers from "I can't" to "I can"</p>
+    <div class="social-links">
+        <a href="#" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i> Portfolio</a>
+        <a href="#" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+        <a href="#" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+    </div>
+</div>
+ -->
+
+<div class="business-card">
+  <div class="header">
+    <img 
+      src="https://cdni.iconscout.com/illustration/free/preview/free-women-web-developer-with-laptop-2040890-1721886.png?f=webp&h=700" 
+      alt="illustration of a woman with crossed legs and a laptop, purple background" 
+      class="photo"
+    >
+    <h1>Charlean Baxter</h1>
+    <p>Web Developer Instructor</p>
+  </div>
+  <div class="contact-info">
+    <p>Email: 
+      <a href="mailto:cbaxterdevelop@outlook.com">cbaxterdevelop@outlook.com</a>
+    </p>
+  </div>
+  <div class="social-media">
+    <a href="https://www.linkedin.com/in/cmb-charlean-baxter/" target="_blank">
+      LinkedIn
+    </a>
+    <a href="https://github.com/SunkissedQueen" target="_blank">GitHub</a>
+    <a href="https://charleandevelops.w3spaces.com" target="_blank">Portfolio</a>
+  </div>
 </div>
 </html>
