--- a/index.html
+++ b/index.html
@@ -27,28 +27,29 @@
     </div>
 </div>
  -->
-
-<div class="business-card">
-  <div class="header">
-    <img 
-      src="https://cdni.iconscout.com/illustration/free/preview/free-women-web-developer-with-laptop-2040890-1721886.png?f=webp&h=700" 
-      alt="illustration of a woman with crossed legs and a laptop, purple background" 
-      class="photo"
-    >
-    <h1>Charlean Baxter</h1>
-    <p>Web Developer Instructor</p>
-  </div>
-  <div class="contact-info">
-    <p>Email: 
-      <a href="mailto:cbaxterdevelop@outlook.com">cbaxterdevelop@outlook.com</a>
-    </p>
-  </div>
-  <div class="social-media">
-    <a href="https://www.linkedin.com/in/cmb-charlean-baxter/" target="_blank">
-      LinkedIn
-    </a>
-    <a href="https://github.com/SunkissedQueen" target="_blank">GitHub</a>
-    <a href="https://charleandevelops.w3spaces.com" target="_blank">Portfolio</a>
-  </div>
-</div>
+<body>
+    <div class="business-card">
+      <div class="header">
+        <img 
+          src="https://cdni.iconscout.com/illustration/free/preview/free-women-web-developer-with-laptop-2040890-1721886.png?f=webp&h=700" 
+          alt="illustration of a woman with crossed legs and a laptop, purple background" 
+          class="photo"
+        >
+        <h1>Charlean Baxter</h1>
+        <p>Web Developer Instructor</p>
+      </div>
+      <div class="contact-info">
+        <p>Email: 
+          <a href="mailto:cbaxterdevelop@outlook.com">cbaxterdevelop@outlook.com</a>
+        </p>
+      </div>
+      <div class="social-media">
+        <a href="https://www.linkedin.com/in/cmb-charlean-baxter/" target="_blank">
+          LinkedIn
+        </a>
+        <a href="https://github.com/SunkissedQueen" target="_blank">GitHub</a>
+        <a href="https://charleandevelops.w3spaces.com" target="_blank">Portfolio</a>
+      </div>
+    </div>
+</body>
 </html>
